--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "@playwright/test": "^1.46.1",
     "@types/mocha": "^10.0.7",
     "@types/node": "^22.5.4"
+  },
+  "dependencies": {
+    "npx": "^10.2.2"
   }
 }
